--- a/events/amplify/index.html
+++ b/events/amplify/index.html
@@ -93,8 +93,8 @@
       
       <p class="subtext">We are thrilled to announce the <b>first-ever</b> symposium for <b>Black</b> and <b>mixed-Black</b> undergraduate physics students in the UK! </p>
         <p class="subtext">
-          An important mission for us is to connect and support Black physicists across the UK, and we thought it’s time to bring the undergraduates together to link up!
-          We know that doing a physics degree can be tough, so we wanted to create space for undergrads to build connections, explore what it means to be Black in physics and feel empowered to take their next steps.
+          An important mission for us is to <b>connect</b> and <b>support</b> Black physicists across the UK, and we thought it’s time to bring the undergrads together to link up!
+          We know that doing a physics degree can be tough, so we wanted to create space to <b>build connections</b>, <b>explore</b> what it means to be #BlackInPhysics and <b>feel empowered</b> to take your next steps.
         </p>
     </div>
 
@@ -105,11 +105,12 @@
       </h3>
 
     <p class="maintext">
-      Amplify 2024 will be a one-day, in-person event hosted by us at The University of Manchester on <span class="orange-text"><b>Thursday 12th September 2024</b></span>. 
+      Amplify 2024 will be a free, one-day, in-person event hosted by us at The University of Manchester on <span class="orange-text"><b>Thursday 12th September 2024</b></span>. 
     </p>
 
     <p class="subtext">
-      The day will be a fantastic blend of interactive sessions to chat about the latest physics research and career discussions to discover the many paths open to students after post graduation. There will be plenty of space and time for students to reflect on themselves as  awesome Black physicists in the UK, and of course we’ll make sure to provide only the best food.
+      The day will be a blend of <b>interactive sessions</b> to chat about the latest physics research and <b>career discussions</b> to discover the many paths open to students post-graduation. There will be plenty of space and time to reflect on yourselves as <b>next-generation Black physicists</b> in the UK, and as always we will be bringing the vibes and <b>nyaming on Afro-Caribbean</b> food.
+
     </p>
     </div>
 
@@ -120,22 +121,22 @@
       </h3>
 
       <div class="flex-row">
-        <p class="orange-text">Connect with other Black physicists.. </p>
+        <p class="orange-text">Link up with other Black physicists.. </p>
         <p class="subtext">
-          This will be a invaluable opportunity to meet other Black <b>undergrad students, graduates, PhD students and academics with careers both within and outside of academia </b> from across the UK. 
-          We have prepared a mash-up of interactive sessions, talks on the latest research and panel discussions to discover the many paths open to students after post-graduation.
+          Meet other UK-based Black <b>undergrad students, graduates, PhD students</b> and <b>academics</b> with careers both within and outside of academia. 
+          This will be a unique opportunity to make connections and discover the diversity in physics throughout the day. 
         </p>
       </div>
       <div class="flex-row">
         <p class="orange-text">Consider your next steps..  </p>
         <p class="subtext">
-          The career options for physicists are *almost* infinite. Whether you’re thinking of <b>PhDs, industry or finance</b>, come along to consider what you need to do for your next step and hear about other Black physicists’ journeys into the working world.
+          The career options for physicists are *almost* infinite. Whether you’re thinking of <b>PhDs, industry or finance</b>, come along to consider what you need to do for your next step and hear about other physicists’ journeys into the working world.
         </p>
       </div>
       <div class="flex-row">
         <p class="orange-text">Take up space! </p>
         <p class="subtext">
-        This event is an opportunity for you to reflect on your <b>unique perspective as a Black physicist in the UK</b>, and what better place to do this than amongst other bright Black physicists. There will be plenty of space and time for students to connect, reflect on their journeys as a physicists, and of course we’ll make sure to that the <b>food</b> is top-tier.
+        This event is an opportunity for you to reflect on your <b>unique perspective</b> as a Black physicist in the UK, and what better place to do this than amongst other like-minded students and professionals!
         </p>
       </div>
     </div>
@@ -147,7 +148,7 @@
       </h3>
 
       <p class="subtext">
-        We recognise the fact that people of Black-heritage are severely underrepresented among those studying physics and physics-related subjects, and working in physics-related fields. Our mission is to change that! Therefore, we encourage you to apply if you are:
+        We recognise the fact that people of Black-heritage are severely <b>underrepresented</b> amongst those studying and working in physics and physics-related fields: our mission is to change that! Therefore, we encourage you to apply if you are:
         <ul>    
           <li>An undergraduate physics student in the UK of Black or mixed-Black heritage 
           </li>
@@ -164,21 +165,22 @@
       TRAVEL COSTS?
     </h3>
     <p class="subtext">
-      There will be <b>travel bursaries available</b>, so that you don’t have to worry about the cost of getting to Manchester. <br>
+      Amplify 2024 is <b>totally free</b>, and there will be <b>travel bursaries available</b> so that you don’t have to worry about the cost of getting to Manchester.
       More details can be found on the registration form. 
     </p>
   </div>
 
   <div class="d-flex flex-column">
    <h3 class="heading">
-    How do I apply?
+    How do I register?
    </h3>
     <p class="subtext">
-    This event will be one for the history books! Join us to celebrate and amplify our voices in the world of physics. <br>
-    Register by <span class="orange-text"><b>Friday 30th August 2024</b></span>: 
+    This event will be one for the history books! Join us in <b>celebrating</b> and <b>amplifying</b> our voices in the world of physics. </p>
+    <p class="subtext">
+    Spaces are limited so make sure you register by <span class="orange-text"><b>Friday 30th August 2024</b></span> to secure your place: 
     </p>
       
-    <form style="padding-top:1rem" class="text-center" target="_blank" action="https://forms.gle/d6mwQynmZ15U6tQ47">
+    <form style="padding-top:1rem" class="text-center" target="_blank" action="https://forms.gle/FQGMdRv3REnapS8V9">
           <button class="btn btn-lg btn-dark orange-btn" type="submit">Register here!</button>
       </form>
 
@@ -200,11 +202,9 @@
       <div style="padding:0;" class="container" >
         <div class="row align-items-center">
           <div class="col">
-            <img style="width:60%;" src="../parent/images/uom_logo.png" alt="">
+            <img style="width:30%;" src="../parent/images/uom_logo.png" alt="">
           </div>
-          <div class="col">
-            <img style=" margin-top: -5%; width: 60%;" src="../parent/images/Logo_for_Imperial_College_London.svg.png" alt="">
-          </div>
+  
         </div>
       </div>
 
